[gd_scene load_steps=11 format=3 uid="uid://cgtbpgksycu1a"]

[ext_resource type="Script" uid="uid://b3wh72ptgfrqa" path="res://scene/games/tictactoe/main.gd" id="1_0ni5y"]
[ext_resource type="Shader" uid="uid://bwnehm6a5m4xv" path="res://scene/games/tictactoe/background.gdshader" id="2_jufxn"]
[ext_resource type="PackedScene" uid="uid://dturr8so8g8cw" path="res://scene/custom_button.tscn" id="2_jxke1"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="5_r3u8x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3u8x"]
shader = ExtResource("2_jufxn")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/bigStarSlow = 2.0
shader_parameter/mediumStarSlow = 6.0
shader_parameter/smallStarSlow = 8.0
shader_parameter/smallStarAmount = 0.002
shader_parameter/mediumStarAmount = 0.01
shader_parameter/bigStarAmount = 0.02

[sub_resource type="ButtonGroup" id="ButtonGroup_pv8f7"]

[sub_resource type="ButtonGroup" id="ButtonGroup_asqip"]

[sub_resource type="ButtonGroup" id="ButtonGroup_fyca0"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2ey3v"]

[sub_resource type="ButtonGroup" id="ButtonGroup_k8b6s"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ni5y")

[node name="SceneBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_r3u8x")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainerDifficultLevel" type="HBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(720, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -167.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Easy" parent="HBoxContainerDifficultLevel" instance=ExtResource("2_jxke1")]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_pv8f7")
text = "EASY"
script = null

[node name="Medium" parent="HBoxContainerDifficultLevel" instance=ExtResource("2_jxke1")]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_asqip")
text = "MEDIUM"
script = null

[node name="Hard" parent="HBoxContainerDifficultLevel" instance=ExtResource("2_jxke1")]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_fyca0")
text = "HARD"
script = null

[node name="PlayModeContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(520, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -212.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="PlayModeLabel" type="Label" parent="PlayModeContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Mode"

[node name="AI" parent="PlayModeContainer" instance=ExtResource("2_jxke1")]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_2ey3v")
text = "AI"
script = null

[node name="Human" parent="PlayModeContainer" instance=ExtResource("2_jxke1")]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_k8b6s")
text = "HUMAN"
script = null

[node name="Cells" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="RestartButton" type="Button" parent="."]
custom_minimum_size = Vector2(720, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -100.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_r3u8x")
theme_override_font_sizes/font_size = 36
text = "SHOOT HERE TO RESTART"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
